fix: align process block header items to center

--- a/src/index.css
+++ b/src/index.css
@@ -4064,6 +4064,7 @@ p {
   padding: 3rem 2.5rem;
   display: flex;
   flex-direction: column;
+  align-items: center;
   text-align: center;
 }
 
